# rust_serverless

./: .env.example  .env.stepfunctions.local  .env.test  .env.test.local  .env.test.local.example  .env.tf_local  .gitignore  CODEOWNERS  Cargo.toml  PULL_REQUEST_TEMPLATE.md  README.md  coverage.sh  docker-compose.yml  run_e2e_tests.sh  run_lambda_watch_for_tests.sh  run_unit_and_integration_tests.sh  start_local_containers.sh  stop_local_containers.sh
common/: Cargo.toml
common/src/: lib.rs
common/src/aws_clients/: api_gateway.rs  dynamodb.rs  event_bridge.rs  mod.rs  secrets_manager.rs  sqs.rs  step_functions.rs
common/src/config/: aws_client_config.rs  mod.rs
common/src/deserializers/: aws.rs  bytes.rs  h160.rs  json_from_string.rs  mod.rs  string_or_h160.rs  string_or_number.rs  u256.rs  u64.rs
common/src/macros/: block_on.rs
common/src/serializers/: h160.rs
common/src/test_tools/: dtos.rs  mod.rs
common/src/test_tools/http/: constants.rs  helpers.rs
common/src/test_tools/mocks/: apig_client.rs  dynamodb_client.rs  event_bridge.rs  mod.rs  sqs_client.rs  step_client.rs
dockerfiles/: Dockerfile.base  Dockerfile.tests  Dockerfile.watch  Dockerfile.wiremock  dummy_main.sh
dockerfiles/checks/: checks.sh
e2e/: Cargo.toml  README.md
e2e/env_files/: .env.test.e2e.dev  .env.test.e2e.eph.example  .env.test.e2e.loadtest  .env.test.e2e.prod  .env.test.e2e.qa  .env.test.e2e.remote  .env.test.e2e.staging  .env.test.e2e.wall-1605-varela.eph  .env.test.e2e.wall-1605-varela1.eph  .env.test.e2e.wall-1605-varela4.eph  .env.test.e2e.wall-1818-fvarela6.eph
e2e/tests/: lib.rs
e2e/tests/cases/: different_policies.rs  fetch_ft_balance.rs  fetch_native_balance.rs  fetch_nft_balance.rs  gas_prediction.rs  get_historical_fees.rs  insufficient_funds.rs  key_creation.rs  mod.rs  order_status.rs  signature.rs  sponsored.rs  test_happy_path.rs  test_multiple_orders_happy_path.rs
e2e/tests/non_deterministic_cases/: cancel_multiple_orders.rs  cancel_order.rs  mod.rs  speedup_order.rs  test_happy_path.rs
e2e/tests/tools/: helper.rs  mod.rs  runner.rs
e2e/tests/tools/config/: mod.rs
e2e/tests/tools/fixtures/: e2e.rs  mod.rs
e2e/tests/tools/fixtures/dynamodb/: balance.rs
model/: Cargo.toml
model/src/: lib.rs
model/src/address_policy_registry/: mod.rs
model/src/cache/: mod.rs
model/src/key/: mod.rs
model/src/nonce/: mod.rs
model/src/order/: helpers.rs  mod.rs  order_data.rs  policy.rs
model/src/sponsor_address_config/: mod.rs
repositories/: Cargo.toml
repositories/src/: deserialize.rs  lib.rs
repositories/src/address_policy_registry/: address_policy_registry_repository_impl.rs  mod.rs
repositories/src/cache/: cache_repository_impl.rs  mod.rs
repositories/src/keys/: keys_repository_impl.rs  mod.rs
repositories/src/nonces/: mod.rs  nonces_repository_impl.rs
repositories/src/orders/: input_builder.rs  mod.rs  orders_repository_impl.rs
repositories/src/sponsor_address_config/: mod.rs  sponsor_address_config_repository_impl.rs
scripts/: authenticate.sh  aws_config.sh  get_auth_data.sh
scripts/add_client/: add_approver.sh  add_client.sh  add_policy.sh  add_policy_registry_to_dynamodb.sh  set_env_vars.sh
scripts/auto_approver/: deploy_approver.sh  logs_policy.json  secrets_manager_policy.json  sqs_policy.json
scripts/common/: add_ae_record_to_dynamo.sh  add_sqs_access_to_send_transaction_to_approvers_sm.sh  create_ae_sqs_queues.sh  create_event_bridge_pipe_for_request_queue.sh  create_event_bridge_pipe_for_response_queue.sh  dual_approver_setup.sh  generate_keypair.sh  generate_signature.sh  maestro_setup.sh  maestro_setup_domain_ae.sh  maestro_teardown.sh
scripts/eph_env/: build_lambdas.sh  configure_e2e_settings.sh  create_env.sh  destroy_env.sh  force_destroy_env.sh  lambda_invoke_apig.sh  lookup_client_id.sh  manage_secrets.sh  switch_env.sh  update_env.sh
scripts/maestro/: add_public_key_for_ae.sh  create_ae_type.sh  create_client_domain.sh  create_domain_ae.sh  create_domain_policy_approver.sh  create_passcode_for_ae.sh  create_passcode_for_policy_approver.sh  create_policy.sh  delete_ae.sh  delete_client_domain.sh  delete_policy.sh  domain_login.sh  get_maestro_access_token.sh  update_domain_admin_role.sh
src/: lib.rs
src/authorization/: authorization_provider_by_address.rs  authorization_provider_by_order.rs  errors.rs  mod.rs
src/blockchain/: config.rs  event_log.rs  mod.rs
src/config/: mod.rs  supported_chains.rs
src/feature_flags/: in_memory.rs  mod.rs
src/http/: lambda_proxy.rs  mod.rs  utils.rs
src/lambda_abstractions/: invoke_step_function_async.rs  mod.rs
src/lambda_structure/: event.rs  http_lambda_main.rs  lambda_trait.rs  mod.rs
src/maestro/: config.rs  dtos.rs  mod.rs  session.rs  state.rs
src/model/: mod.rs
src/publish/: config.rs  event_bridge.rs  mod.rs
src/rest/: mod.rs
src/result/: error.rs  mod.rs
src/swagger-ui-dist/: index.html  swagger-initializer.js
src/validations/: mod.rs
tests/: mod.rs
tests/data/: approver_key.pem
tests/fixtures/: config.rs  dynamodb.rs  eventbridge.rs  lambda.rs  mod.rs  provider.rs  repo.rs  secrets.rs  sqs.rs
tests/handlers/: admin_add_address_policy.rs  admin_cancel_orders.rs  admin_fetch_pending_orders.rs  admin_force_order_selection.rs  admin_update_address_nonce.rs  chain_listener_update_order.rs  chain_listener_update_reorged_orders.rs  common_assertions.rs  create_policy_mapping.rs  delete_policy_mapping.rs  fetch_all_policy_mappings.rs  fetch_ft_balance.rs  fetch_native_balance.rs  fetch_nft_balance.rs  fetch_policy_mapping.rs  gas_price_prediction.rs  mod.rs  mpc_compute_order_state_from_tx_log.rs  mpc_create_key_order.rs  mpc_create_signature_order.rs  mpc_create_sponsored_order.rs  mpc_default_approver.rs  mpc_fetch_nonce.rs  mpc_fetch_order.rs  mpc_get_historical_fees.rs  mpc_nonce_writer.rs  mpc_order_selector.rs  mpc_transaction_bundler.rs  mpc_update_order_status.rs  oms_cancel_order.rs  oms_speedup_order.rs  process_order_status_stream.rs  select_policy.rs  send_transaction.rs  tx_monitor.rs  update_policy_mapping.rs
(+204 files in other folders)
