[package]
name = "mpc-signature-sm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
aws_lambda_events = { version = "0.8.3", features = ["sqs"] }
async-trait = "0.1.63"
chrono = { version = "0.4.31", default-features = false, features = [
    "clock",
    "std",
    "serde",
] }
common = { path = "common" }
model = { path = "model" }
repositories = { path = "repositories" }
dotenv = "0.15.0"
envy = "0.4.2"
ethers = "2.0.13"
hex = "0.4.3"
http = "0.2.9"
k256 = { version = "0.13.0", features = ["pem"] }
lambda_http = "0.7"
lambda_runtime = "0.7"
openssl = { version = "0.10.55", features = ["vendored"] }
rand = "0.8.5"
reqwest = { version = "0.11.23", default-features = false, features = [
    "json",
    "rustls-tls",
] }
reqwest-middleware = "0.2.0"
reqwest-retry = "0.3.0"
rlp = "0.5.1"
rusoto_secretsmanager = { version = "0.48.0" }
rusoto_sqs = { version = "0.48.0" }
rusoto_core = { version = "0.48.0" }
rusoto_dynamodb = { version = "0.48.0", features = ["deserialize_structs"] }
rusoto_stepfunctions = "0.48.0"
rusoto_apigateway = "0.48.0"
secp256k1 = "0.27.0"
secrets_provider = { git = "ssh://git@github.com/federicojvarela/secrets_provider/", features = [
    "aws",
] }
serde = "1.0.152"
serde_dynamo = { version = "4.2.8", features = ["rusoto_dynamodb+0_48"] }
serde_json = "1.0.108"
task-local-extensions = "0.1.3"
thiserror = "1.0.38"
tokio = { version = "1", features = ["macros"] }
tower = "0.4.13"
tower-service = "0.3.2"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
    "std",
    "json",
] }
tracing-log = "0.2"
tracing-bunyan-formatter = "0.3"
tracing-appender = "0.2"
uuid = { version = "1.3.0", features = ["serde", "v4"] }
validator = { version = "0.16.0", features = ["derive"] }


[dev-dependencies]
mockall = "0.11.4"
rstest = { version = "0.16.0", default-features = false }
wiremock = "0.5.17"
repositories = { path = "repositories", features = ["test_mocks"] }
rusoto_events = "0.48.0"


[package.metadata.lambda.env]
AWS_REGION = "us-west-2"
KEY_CREATION_STATE_MACHINE_ARN = "def"
SIGNATURE_REQUEST_RECEIVED_STATE_MACHINE_ARN = "abc"
LAUNCHDARKLY_SDK_KEY_SECRET_NAME = "sdk-6f3ffeb5-6ca6-4b95-8628-3b94483832c7"
RESPONSE_QUEUE_URL = "http://localstack:4566/000000000000/compliance-response"

[workspace]
exclude = ["e2e"]
members = ["common", "model", "repositories"]


[[bin]]
name = "create_policy_mapping"
path = "src/handlers/policy_mappings/create_policy/main.rs"

[[bin]]
name = "delete_policy_mapping"
path = "src/handlers/policy_mappings/delete_policy/main.rs"

[[bin]]
name = "fetch_all_policy_mappings"
path = "src/handlers/policy_mappings/fetch_all_policy/main.rs"

[[bin]]
name = "fetch_policy_mapping"
path = "src/handlers/policy_mappings/fetch_policy/main.rs"

[[bin]]
name = "update_policy_mapping"
path = "src/handlers/policy_mappings/update_policy/main.rs"
