[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
ana-tools = { git = 'ssh://git@github.com/fortelabsinc/ana-tools', tag = "v0.3.0", features = ["config-loader"] }
async-trait = "0.1.63"
anyhow = "1.0.69"
dotenv = "0.15.0"
envy = "0.4.2"
ethers = "2.0.11"
hex = "0.4.3"
lambda_http = "0.7"
mockall = "0.11.4"
rusoto_events = "0.48.0"
rusoto_secretsmanager = { version = "0.48.0" }
rusoto_sqs = { version = "0.48.0" }
rusoto_core = { version = "0.48.0" }
rusoto_dynamodb = { version = "0.48.0", features = [ "deserialize_structs" ] }
rusoto_stepfunctions = "0.48.0"
rusoto_apigateway = "0.48.0"
serde = "1.0.152"
serde_json = "1.0.91"
uuid = { version = "0.8.2", features = ["v4"] }
secrets_provider = { git = "ssh://git@github.com/fortelabsinc/secrets_provider/", tag = "2.0.0", features = ["aws"] }
eventbridge_connector = { git = 'ssh://git@github.com/fortelabsinc/eventbridge-connector', tag = "0.1.0", features = ["legacy-rusoto-aws"] }
