[package]
name = "mpc-signature-sm-e2e"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.23", default-features = false, features = ["clock", "std", "serde"]}
common = { path = "../common" }
envy = "0.4.2"
reqwest = { version = "0.11.23", default-features = false, features = ["json", "rustls-tls"] }
serde = "1.0.152"
serde_json = "1.0.91"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
ethers = "2.0.11"
rstest = { version = "0.16.0", default-features = false }
rusoto_dynamodb = "0.48.0"
rusoto_core = "0.48.0"
serde_dynamo = { version = "4.2.5", features=["rusoto_dynamodb+0_48"]}
uuid = { version = "0.8.2", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["time"] }
