[package]
name = "model"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
chrono = { version = "0.4.31", default-features = false }
common = { path = "../common" }
ethers = "2.0.11"
serde = "1.0.152"
serde_json = "1.0.108"
thiserror = "1.0.38"
uuid = { version = "1.3.0", features = ["serde", "v4"] }

[dev-dependencies]
mockall = "0.11.4"
