[package]
name = "repositories"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
async-trait = "0.1.63"
chrono = { version = "0.4.31", default-features = false }
common = { path = "../common" }
model = { path = "../model" }
ethers = "2.0.11"
hex = "0.4.3"
rusoto_core = { version = "0.48.0" }
rusoto_dynamodb = { version = "0.48.0", features = ["deserialize_structs"] }
serde = "1.0.152"
serde_dynamo = { version = "4.2.8", features = ["rusoto_dynamodb+0_48"] }
serde_json = "1.0.108"
thiserror = "1.0.38"
uuid = { version = "1.3.0", features = ["serde", "v4"] }
mockall = { version = "0.11.4", optional = true }
tracing = { version = "0.1", features = ["log"] }

[dev-dependencies]
rstest = { version = "0.16.0", default-features = false }
mockall = "0.11.4"
tokio = { version = "1", features = ["macros"] }

[features]
test_mocks = ["dep:mockall"]
